Don't set the max width on special pages or non-view actions
This excludes all other actions, such as edit, history, etc.

Change-Id: I0f60f545c15b4fade75efe189c48c2e8fa69011f

--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -5,8 +5,16 @@ blockquote {
 }
 
 
-#bodyContent {
-	max-width: 715px;
+.action-view {
+	#bodyContent {
+		max-width: 715px;
+	}
+
+	&.ns-special {
+		#bodyContent {
+			max-width: none;
+		}
+	}
 }
 
 /* Content */
