--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -32,7 +32,7 @@ div#content {
 	#firstHeading {
 		font-family: @content-heading-font-family;
 		font-size: 1.833em;
-		line-height: 22pt;
+		line-height: 30pt;
 		padding: 0;
 		margin-bottom: 4pt;
 	}
@@ -53,7 +53,9 @@ div#content {
 	h4,
 	h5,
 	h6 {
-		margin-top: 14pt;
+		margin-top: 3pt;
+		padding-bottom: 0;
+		margin-bottom: 0;
 	}
 
 	h3 {
@@ -92,5 +94,21 @@ div#content {
 	background-repeat: no-repeat;
 	.background-image('images/external-link-ltr-icon.png');
 	padding-right: 13px;
+}
+
+// Table of contents
+#toc,
+.mw-warning {
+	border: 1px solid #E0E0E0;
+}
+
+// enwiki specific css for related and disambiguation links
+// Should not be ported to core.
+.rellink,
+.dablink {
+	line-height: 1.5em;
+	margin-bottom: 0;
+	padding: 3px 0px 0px 0px;
+	color: #333;
 }
 
