--- a/less/styles.less
+++ b/less/styles.less
@@ -6,6 +6,7 @@
 	@import "screen.less";
 	@import "screen-beta.less";
 	@import "collapsibleNav.less";
+	@import "thumbnails.less";
 }
 
 @media screen and (min-width: 982px) {
