--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -2,6 +2,7 @@ blockquote {
 	font-family: @content-heading-font-family;
 	font-size: 1.2em;
 	font-style: italic;
+	line-height: 1.6em;
 }
 
 
@@ -85,6 +86,10 @@ div#content {
 	// FIXME: this is hacky
 	#toc h2 {
 		font-size: 100%;
+	}
+
+	sup {
+		line-height: 0;
 	}
 }
 
