--- a/less/styles.less
+++ b/less/styles.less
@@ -3,9 +3,11 @@
 @import "variables-beta.less";
 
 @media screen {
-	@import "screen.less";
+	@import "components/common.less";
+	@import "components/navigation.less";
+	@import "components/footer.less";
+	@import "components/notifications.less";
 	@import "screen-beta.less";
-	@import "collapsibleNav.less";
 	@import "thumbnails.less";
 }
 
