Add Fixed header experiment to Vector Beta
Winter. It's on.
$wgVectorBetaWinter = true to enable.

Change-Id: I8f34fdbc4857adb8534bc9393749ba2bf5ca37fc

--- a/less/styles.less
+++ b/less/styles.less
@@ -4,13 +4,10 @@
 
 @media screen {
 	@import "components/common.less";
+	// FIXME: Refactor this in core and break this out so VectorBeta Winter can completely rewrite it
 	@import "components/navigation.less";
 	@import "components/footer.less";
 	@import "components/notifications.less";
 	@import "screen-beta.less";
 	@import "thumbnails.less";
-}
-
-@media screen and (min-width: 982px) {
-	@import "screen-hd.less";
 }
