--- a/less/variables-beta.less
+++ b/less/variables-beta.less
@@ -2,6 +2,10 @@
 
 @body-font-size: inherit;
 
+// Header
+@content-nav-divider-color: #ccc;
+@header-height: 3em;
+
 // Page content
 @content-font-family: Arimo, "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @content-font-color: #252525;
@@ -10,3 +14,9 @@
 @content-padding: 1em;
 @content-heading-font-size: 1.6em;
 @content-heading-font-family: "Linux Libertine", Georgia, Times, serif;
+
+// Colors
+@blue-base-color: #1B61DD;
+@left-nav-width: 10em;
+@gray-base-color: #EEE;
+
