--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -1,10 +1,3 @@
-blockquote {
-	font-family: @content-heading-font-family;
-	font-size: 1.2em;
-	line-height: 1.6em;
-}
-
-
 .action-view {
 	#bodyContent {
 		max-width: 715px;
@@ -19,7 +12,7 @@ blockquote {
 
 /* Content */
 div#content {
-	line-height: 1.5em;
+	line-height: @content-line-height;
 	.mw-editsection {
 		font-family: @content-font-family;
 	}
@@ -31,7 +24,7 @@ div#content {
 	h1,
 	#firstHeading {
 		font-family: @content-heading-font-family;
-		font-size: 1.833em;
+		font-size: 1.8em;
 		line-height: 30pt;
 		padding: 0;
 		margin-bottom: 4pt;
@@ -86,9 +79,56 @@ div#content {
 		overflow-x: auto;
 	}
 
+	blockquote {
+		font-family: @content-heading-font-family;
+		font-size: 1.1em;
+		line-height: @content-line-height;
+		margin: 1em 0;
+		padding: 0 35px 0 40px;
+		position: relative;
+
+		&:before {
+			content: open-quote;
+			font-size: 3em;
+			line-height: 1;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+
+		&:after{
+			content: close-quote;
+			font-size: 3em;
+			line-height: 1;
+			position: absolute;
+			right: 0;
+			bottom: 0;
+		}
+	}
+
+	// Table of contents
+	#toc {
+		padding: 0 1.4em;
+		margin: 0 1em 0 0;
+		font-size: 100%;
+		background-color: transparent;
+		border: none;
+		border-left: 5px solid #e0e0e0;
+		color: #333;
+	}
+
+	#toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
+		text-align: left;
+	}
+
+	.tocnumber {
+		display: none;
+	}
+
 	// FIXME: this is hacky
 	#toc h2 {
 		font-size: 100%;
+		font-family: @content-font-family;
 	}
 
 	sup {
@@ -104,8 +144,6 @@ div#content {
 	padding-right: 13px;
 }
 
-// Table of contents
-#toc,
 .mw-warning {
 	border: 1px solid #E0E0E0;
 }
@@ -114,9 +152,10 @@ div#content {
 // Should not be ported to core.
 .rellink,
 .dablink {
-	line-height: 1.5em;
-	margin-bottom: 0;
-	padding: 3px 0px 0px 0px;
+	font-style: italic;
+	font-size: 90%;
+	line-height: 1.5;
+	margin: 0 0 .5em 0;
+	padding: 0 0 0 1.6em;
 	color: #333;
 }
-
