Add horizontal scroll to pre elements (where required)
On pages where `pre` elements have a lot of content, it breaks
the layout and the content overflows out of the gray box.

Example - https://en.wikipedia.org/wiki/User:Prtksxna/test.js

Change-Id: I4af1625ed2ed4ca7a5a7f4bd416107b49be1b4b0

--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -82,6 +82,10 @@ div#content {
 		margin-bottom: 8pt;
 	}
 
+	pre {
+		overflow-x: auto;
+	}
+
 	// FIXME: this is hacky
 	#toc h2 {
 		font-size: 100%;
