--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -22,6 +22,13 @@ div#content {
 	}
 
 	h1,
+	#firstHeading,
+	h2 {
+		// optically align heading serif font with sans-serif content font
+		margin-left: -.04em;
+	}
+
+	h1,
 	#firstHeading {
 		font-family: @content-heading-font-family;
 		font-size: 1.8em;
@@ -34,9 +41,6 @@ div#content {
 		font-size: 1.5em;
 		line-height: 22pt;
 		margin-top: 16pt;
-	}
-
-	h2 {
 		font-family: @content-heading-font-family;
 		padding: 0;
 		margin-bottom: 4pt;
