--- a/less/variables-beta.less
+++ b/less/variables-beta.less
@@ -3,11 +3,10 @@
 @body-font-size: inherit;
 
 // Page content
-@content-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+@content-font-family: Arimo, "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @content-font-color: #252525;
 @content-font-size: 0.875em;
 @content-line-height: 1.6;
 @content-padding: 1em;
 @content-heading-font-size: 1.6em;
-// Times will map to an appropriate free font in Linux
-@content-heading-font-family: Georgia, Times, serif;
+@content-heading-font-family: "Linux Libertine", Georgia, Times, serif;
