Hygiene: Reorganise the repository by beta feature
Change-Id: Ieb989d0df7697fac817065cfddf5f3bfa6caaf63

--- a/resources/fixedHeader/header.less
+++ b/resources/fixedHeader/header.less
@@ -1,5 +1,5 @@
-@import 'variables-beta';
-@import "mixins";
+@import '../variables-beta';
+@import "../mixins";
 
 // FIXME: Fail.
 #mw-notification-area {
