--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,3 +2,9 @@
 .icon( @icon ) {
 	.background-image-svg( ~"images/@{icon}.svg", ~"images/@{icon}.png" );
 }
+
+.box-sizing( @value ) {
+	-moz-box-sizing: @value;
+	-webkit-box-sizing: @value;
+	box-sizing: @value;
+}
