--- a/resources/typography/screen-beta.less
+++ b/resources/typography/screen-beta.less
@@ -33,7 +33,7 @@ div#content {
 		margin: 0 1em 0 0;
 		font-size: 100%;
 		background-color: transparent;
-		border: none;
+		border: 1px solid #e0e0e0;
 		border-left: 5px solid #e0e0e0;
 		color: #333;
 	}
