Fix rtl icon positioning in the compact personal bar
Change-Id: Ibf3333099e49e3a4ce5dc08023908f9624b24a85

--- a/resources/compactPersonalBar/compactPersonalBar.less
+++ b/resources/compactPersonalBar/compactPersonalBar.less
@@ -80,6 +80,7 @@
 
 			a {
 				margin: .2em 0;
+				background-position: left;
 
 				span {
 					display: inline-block;
@@ -140,6 +141,7 @@
 }
 
 #pt-flyout div > a {
+	background-position: left;
 	.background-image-svg("images/user.svg", "images/user.png");
 }
 
