Set explicit text-align on pt-flyout
This fixes an RTL rendering problem on Firefox.

Bug: 65476
Change-Id: I50133c61a50fbcb12d5399d056ae5a83869ee9fd

--- a/resources/compactPersonalBar/compactPersonalBar.less
+++ b/resources/compactPersonalBar/compactPersonalBar.less
@@ -25,6 +25,11 @@
 	#pt-flyout {
 		// prevent bar elements from jumping when flyout expanded
 		max-height: 2.2em;
+
+		// Set correct alignment in Firefox in RTL wikis.
+		// This shouldn't be needed, but Firefox has a bug with this.
+		// See https://bugzilla.wikimedia.org/show_bug.cgi?id=65476
+		text-align: left;
 	}
 
 	#pt-flyout > div {
