Remove dependency on MediaWiki core skins.vector.styles module
Also removed redundant 'line-height' declaration on blockquote
(it's already set to that from the inherited styles).

This is needed so that we can remove the Vector path from the global
Less import path list in MediaWiki core.

Change-Id: I6514a3418d3cd074458f83aa81065dba3ef00fdd

--- a/resources/typography/screen-beta.less
+++ b/resources/typography/screen-beta.less
@@ -1,9 +1,11 @@
+@import "mediawiki.mixins";
+@import "../variables-beta.less";
+
 /* Content */
 div#content {
 	blockquote {
 		font-family: @content-heading-font-family;
 		font-size: 1.1em;
-		line-height: @content-line-height;
 		margin: 1em 0;
 		padding: 0 35px 0 40px;
 		position: relative;
