--- a/resources/variables-beta.less
+++ b/resources/variables-beta.less
@@ -1,3 +1,6 @@
+// Page content
+@content-heading-font-family: "Linux Libertine", Georgia, Times, serif;
+
 // Header
 @content-nav-divider-color: #ccc;
 @header-height: 3em;
