Styling fixes to CPB
Minimum width of flyout set to 200px, don't show notifications count if 0.

Change-Id: I1470b686ae4569cb1400e5638dcead693cca7667

--- a/resources/compactPersonalBar/compactPersonalBar.less
+++ b/resources/compactPersonalBar/compactPersonalBar.less
@@ -25,6 +25,7 @@
 	#pt-flyout {
 		line-height: 1.125em;
 		margin-top: .3em;
+		min-width: 200px;
 
 		// Set correct alignment in Firefox in RTL wikis.
 		// This shouldn't be needed, but Firefox has a bug with this.
